--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["George Roger <georger@xmos.com>"]
 
 [dependencies]
 gb_emu = { path = "gb_emu" }
-gb_synth = { path = "../gb_synth" }
+gb_synth = { path = "gb_synth" }
 sdl2 = "0.31.0"
 
 [profile.release]
